--- a/papers/I/Analysis/Tara_phyto.ipynb
+++ b/papers/I/Analysis/Tara_phyto.ipynb
@@ -99,101 +99,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "abf09bd3-2096-4b8b-8a04-cd693e31955a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>wave</th>\n",
-       "      <th>Pro SS120 9</th>\n",
-       "      <th>ProSS120 70</th>\n",
-       "      <th>Pro MED4 9</th>\n",
-       "      <th>Pro MED4 70</th>\n",
-       "      <th>SynWH8103</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>400</td>\n",
-       "      <td>0.033611</td>\n",
-       "      <td>0.038507</td>\n",
-       "      <td>0.017361</td>\n",
-       "      <td>0.024468</td>\n",
-       "      <td>0.037500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>401</td>\n",
-       "      <td>0.033861</td>\n",
-       "      <td>0.038903</td>\n",
-       "      <td>0.017579</td>\n",
-       "      <td>0.024798</td>\n",
-       "      <td>0.038227</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>402</td>\n",
-       "      <td>0.034111</td>\n",
-       "      <td>0.039298</td>\n",
-       "      <td>0.017797</td>\n",
-       "      <td>0.025129</td>\n",
-       "      <td>0.038855</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>403</td>\n",
-       "      <td>0.034360</td>\n",
-       "      <td>0.039694</td>\n",
-       "      <td>0.018016</td>\n",
-       "      <td>0.025459</td>\n",
-       "      <td>0.039482</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>404</td>\n",
-       "      <td>0.034610</td>\n",
-       "      <td>0.040089</td>\n",
-       "      <td>0.018234</td>\n",
-       "      <td>0.025789</td>\n",
-       "      <td>0.040280</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   wave  Pro SS120 9  ProSS120 70  Pro MED4 9  Pro MED4 70  SynWH8103\n",
-       "0   400     0.033611     0.038507    0.017361     0.024468   0.037500\n",
-       "1   401     0.033861     0.038903    0.017579     0.024798   0.038227\n",
-       "2   402     0.034111     0.039298    0.017797     0.025129   0.038855\n",
-       "3   403     0.034360     0.039694    0.018016     0.025459   0.039482\n",
-       "4   404     0.034610     0.040089    0.018234     0.025789   0.040280"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "module 'oceancolor.ph.load_data' has no attribute 'moore1995'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df_moore \u001b[38;5;241m=\u001b[39m \u001b[43mload_data\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmoore1995\u001b[49m()\n\u001b[1;32m      2\u001b[0m df_moore\u001b[38;5;241m.\u001b[39mhead()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'oceancolor.ph.load_data' has no attribute 'moore1995'"
+     ]
     }
    ],
    "source": [
@@ -207,6 +126,48 @@
    "metadata": {},
    "source": [
     "# Reconstruct without the NAP term"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2982f609-a834-4a3c-b971-922b36e07996",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(239880, 4)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coeff.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a37f23c9-85f3-4a98-b78b-6fe8e9d55112",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 59)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M.shape"
    ]
   },
   {
@@ -434,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
